raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-11-37-31.ceg/compilation.txt
NT.java:16: error: ';' expected
        double[] nilaiMasuk = new double[5]
                                           ^
NT.java:39: error: reached end of file while parsing
}
 ^
2 errors
Not compiled
